se finaliza grid de galeria

--- a/index.html
+++ b/index.html
@@ -85,12 +85,47 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores id officia cumque nobis ex cum vitae enim magnam incidunt laborum. Hic laudantium fugiat animi voluptatem similique? Atque aperiam reiciendis numquam?</p>
             <a class="btn" href="#">Más Información</a>
         </div>
-    </div>      <!--aqui finaliza el modelo-->
-
-
-
-
+    </div>     <!--aqui finaliza el modelo-->
 </main>
+
+
+<!-- GALERIA -->
+
+<section class="contenedor mt-5">
+    <h2>Galería</h2>
+<div class="galeria">
+
+    <div class="imagen">
+        <img src="img/imagen_1.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_2.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_3.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_4.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_5.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_6.jpg" alt="imagen galeria">
+    </div>
+
+    <div class="imagen">
+        <img src="img/imagen_7.jpg" alt="imagen galeria">
+    </div>
+
+</div>
+
+</section>
 
 </body>
 </html>
